src/components/PrivacyPolicy/privacypolicy.css
#privacy-policy {
	border: solid var(--border-width) var(--primaryColor);
	& section {
		padding: calc(var(--spacer) * 2) calc(var(--spacer) * 7);
		& .title, & .description {
			margin-bottom: var(--spacer);
		}
		&.hero {
			background-image: url('../../images/lock-bg.png');
			background-size: auto;
			background-repeat: no-repeat;
			background-position: 90% 0%;
			& .plane {
				width: 50%;
				padding: calc(var(--spacer) * 11) 0 calc(var(--spacer) * 6) calc(var(--spacer));
				& p {
					font-size: calc(var(--font-size-base) * 1.2);
					width: 65%;
				}
			}
		}
		&.general-information {
			& .border-left {
				border-left: 4px solid;
				padding: 0 0 0 1rem;
			}
		}
		&.analytics {
			& .description {
				width: 80%;
			}
		}
		&.your-rights {
			& .list li {
        margin-bottom: calc(var(--spacer) * 1.5);
			}
    }
    &.banner {
      background: rgb(16,10,53);
      background: linear-gradient(135deg, rgba(16,10,53,0) 8%, rgba(16,10,53,1) 8%, rgba(16,10,53,1) 92%, rgba(16,10,53,0) 92%, rgba(16,10,53,0) 100%);
      & h1 span {
        font-weight: var(--font-weight-light)
      }
      & .btn {
        margin: calc(var(--spacer) * 2) 0;
        display: inline-block;
      }
    }
	}
}

